Bug 49354 - [4.7 Regression] bootstrap failure
Summary: [4.7 Regression] bootstrap failure
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: bootstrap (show other bugs)
Version: 4.7.0
: P3 normal
Target Milestone: 4.7.0
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-10 00:46 UTC by H.J. Lu
Modified: 2011-06-10 09:38 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2011-06-10 00:49:08


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2011-06-10 00:46:12 UTC
On Linux/x86, revision 174870 gave:

../../src-trunk/gcc/ira-costs.c: In function 'setup_regno_cost_classes_by_mode':
../../src-trunk/gcc/ira-costs.c:303:14: error: request for implicit conversion from 'void *' to 'cost_classes_t' not permitted in C++ [-Werror=c++-compat]

Revision 174864 is OK.
Comment 1 H.J. Lu 2011-06-10 00:49:08 UTC
It is caused by revision 174868:

http://gcc.gnu.org/ml/gcc-cvs/2011-06/msg00357.html
Comment 2 Hans-Peter Nilsson 2011-06-10 01:04:37 UTC
Author: hp
Date: Fri Jun 10 01:04:34 2011
New Revision: 174878

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=174878
Log:
	PR bootstrap/49354
	* ira-costs.c (setup_regno_cost_classes_by_mode): Add missing cast
	to last assignment.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/ira-costs.c
Comment 3 Richard Biener 2011-06-10 09:38:04 UTC
Fixed.