	PR bootstrap/49354 	* ira-costs.c (setup_regno_cost_classes_by_mode): Add missing cast 	to last assignment.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@174878 138bc75d-0d04-0410-961f-82ee72b054a4