gcc/ira-costs.c
@@ -300,7 +300,7 @@ setup_regno_cost_classes_by_mode (int regno, enum machine_mode mode)
 	  *slot = classes_ptr;
 	}
       else
-	classes_ptr = *slot;
+	classes_ptr = (cost_classes_t) *slot;
       cost_classes_mode_cache[mode] = (cost_classes_t) *slot;
     }
   regno_cost_classes[regno] = classes_ptr;
